--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "next": "13.4.19",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "next": "^13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
